# ha-tv-tray

./: README.md  config.yaml  justfile  pyproject.toml
.githooks/: prepare-commit-msg
src/ha_tv_tray/: config.py  main.py  panel.py  service.py
