[project]
name = "ha-tv-tray"
version = "0.4.1"
description = "KDE system tray TV remote control via Home Assistant"
authors = [{ name = "ha-tv-tray" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "PyYAML>=6.0",
]

[project.scripts]
ha-tv-tray = "ha_tv_tray.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
